--- a/m1/mainsytle.css
+++ b/m1/mainsytle.css
@@ -25,7 +25,6 @@ nav a:hover, nav a:active, nav a:focus {
 
 body {
 	background-color: #FFF;
-    align-content: center;
 }
 
 footer {
@@ -41,7 +40,7 @@ footer {
 .container {
 	max-width: 100%;
 	min-width: 500px;
-	background-color: #E9AF1E;	
+	background-color: #E9AF1E;
 }
 
 .content {
@@ -61,19 +60,14 @@ footer {
 }
 
 .musos {
-	content: center;
-    text-align: center;
- 	float: left;
 	padding-top: 20px;
-	padding-bottom: 0px;
 	padding-left: 5px;
 	padding-right: 20px;
     margin-left: 20px;
     margin-right: 20px;
 	background-color: #F58013;
-	opacity: 0.8;
-	color: #000000;
-	width: 30%;
+	color: #000;
+	max-width: 30%;
     display: block;
 	
 }
