--- a/m1/mainsytle.css
+++ b/m1/mainsytle.css
@@ -25,6 +25,7 @@ nav a:hover, nav a:active, nav a:focus {
 
 body {
 	background-color: #FFF;
+    align-content: center;
 }
 
 footer {
@@ -40,7 +41,7 @@ footer {
 .container {
 	max-width: 100%;
 	min-width: 500px;
-	background-color: #E9AF1E;
+	background-color: #E9AF1E;	
 }
 
 .content {
@@ -60,14 +61,19 @@ footer {
 }
 
 .musos {
+	content: center;
+    text-align: center;
+ 	float: left;
 	padding-top: 20px;
-	padding-left: 5px;
+	padding-bottom: 0px;
+	padding-left: 0px;
 	padding-right: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 30px;
+    margin-right: 30px;
 	background-color: #F58013;
-	color: #000;
-	max-width: 30%;
+	opacity: 0.8;
+	color: #000000;
+	width: 45%;
     display: block;
 	
 }
