--- a/m1/mainsytle.css
+++ b/m1/mainsytle.css
@@ -6,42 +6,46 @@ header {
 
 nav {
 	background-color: #FFF;
-	text-align: center;
-	padding-top: 25px;
-	padding-bottom: 15px;
+	text-align: left;
+	padding-top: 15px;
+	padding-bottom: 10px;
+    padding-left: 25px;
 }
 
 nav > a {
 	text-decoration: none;
 	color: #000;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 nav a:hover, nav a:active, nav a:focus { 
 	background-color: #D8D8D8;
-	color: #000;
-	border-radius: 7px 7px 7px 7px;
-	padding: 5px 5px 5px 5px
+	color: #136ACA;
+	border-radius: 5px 5px 5px 5px;
 }
 
 body {
 	background-color: #FFF;
     align-content: center;
+    color: #FFF;
 }
 
 footer {
 	background-color: #000;
 	color: #FFF;
 	text-align: center;
-	padding-top: 15px;
+	padding-top: 20px;
 	padding-bottom: 10px;
-	padding-left: 45px;
+	padding-left: 25px;
 	min-height: 190px
 }
 
 .container {
 	max-width: 100%;
 	min-width: 500px;
-	background-color: #E9AF1E;	
+	background-color: #FFF;
+    font-family: "Verdana", Times, serif;
 }
 
 .content {
@@ -61,28 +65,27 @@ footer {
 }
 
 .musos {
-	content: center;
-    text-align: center;
- 	float: left;
 	padding-top: 20px;
 	padding-bottom: 0px;
-	padding-left: 0px;
+	padding-left: 15px;
 	padding-right: 20px;
-    margin-left: 30px;
-    margin-right: 30px;
-	background-color: #F58013;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 15px;
+	background-color: #000;
 	opacity: 0.8;
-	color: #000000;
-	width: 45%;
-    display: block;
+	color: inherit;
+    max-width: 45%;
+    min-width: 400px;
+    display: inline-block;
 	
 }
 
 .sponsor {
 	float: left;
 	width: 45%;
-	padding-right: 15px;
-	padding-left: 55px;
+	padding-right: 25px;
+    text-align: left;
 }
 
 .contactdetails {
