--- a/m1/mainsytle.css
+++ b/m1/mainsytle.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+
+@media (min-width: 45em) {
+    .m-2col {width: 100%;}
+    .m-1col {width: 48%;}
+    .col:nth-child(2) {margin-right: 0;}
+}
+
 header {
 	background-color:#000;
 	color: #FFF;
@@ -14,7 +21,6 @@ nav {
 
 nav > a {
 	text-decoration: none;
-	color: #000;
     margin-left: 15px;
     margin-right: 15px;
 }
@@ -27,7 +33,7 @@ nav a:hover, nav a:active, nav a:focus {
 
 body {
 	background-color: #FFF;
-    align-content: center;
+    align-items: center;
     color: #FFF;
 }
 
@@ -40,17 +46,20 @@ body {
 footer {
 	background-color: #000;
 	color: #FFF;
+    font-size: 10px;
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 10px;
 	padding-left: 25px;
-	min-height: 190px
+    width: inherit .container;
+    overflow: auto;
 }
 
 .container {
 	max-width: 100%;
-	min-width: 500px;
+	min-width: 800px;
 	background-color: #FFF;
+    color: #000;
     font-family: "Verdana", Times, serif;
 }
 
@@ -68,21 +77,21 @@ footer {
 
 .content > p {
 	font-size: 18px;
-	text-align: center;
+	text-align: left;
 }
 
-.musos {
+.musos2 {
 	padding-top: 5px;
 	padding-bottom: 5px;
-	padding-left: 20px;
-	padding-right: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+	padding-left: 3%;
+	padding-right: 3%;
+    margin-left: 1%;
+    margin-right: 1%;
     margin-bottom: 15px;
 	background-color: #000;
+    color: #FFF;
 	opacity: 0.8;
-	color: inherit;
-    width: 45%;
+    width: 41.5%;
     display: inline-block;
 }
 
@@ -95,7 +104,37 @@ footer {
 
 .contactdetails {
 	float: right;
+    text-align: right;
 	max-width: 45%;
 	padding-left: 15px;
 	padding-right: 55px;
+}
+.events {
+    padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 3%;
+	padding-right: 3%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 15px;
+	background-color: #000;
+    color: #FFF;
+	opacity: 0.8;
+    width: 41.5%;
+    display: inline-block;
+}
+
+.musos1 {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	padding-left: 3%;
+	padding-right: 3%;
+    margin-left: 1%;
+    margin-right: 1%;
+    margin-bottom: 15px;
+	background-color: #000;
+    color: #FFF;
+	opacity: 0.8;
+    width: 41.5%;
+    display: inline-block;
 }
